# summit_xl_sim

./: .dockerignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  ros_entrypoint.sh  simulation-in-container-run.data  simulation-in-container-run.func  simulation-in-container-run.sh  simulation-in-container.func  stack.xml
bh262_description/: CMakeLists.txt  (+1 more)
summit_xl_2dnav/: CMakeLists.txt  mainpage.dox  package.xml  readme.txt  robot_pose_ekf.launch  save_map.sh  summit_xl_ekf.launch  summit_xl_gmapping.launch  summit_xl_rviz.vcg
summit_xl_2dnav/config/: move_base.rviz
summit_xl_2dnav/config_navigation/: base_local_planner_params.yaml  costmap_common_params.yaml
summit_xl_2dnav/config_rviz/: move_base_local.rviz
summit_xl_2dnav/launch/: summit_xl_gmapping.launch
summit_xl_2dnav/navigation_amcl/: amcl_summit.launch  move_base_amcl.launch
summit_xl_2dnav/navigation_config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
summit_xl_2dnav/navigation_local/: move_base_local.launch  move_base_local_nomap.launch
summit_xl_2dnav/purepursuit/: purepursuit.launch  purepursuit_marker.launch
summit_xl_bringup/: CMakeLists.txt  mainpage.dox  package.xml
summit_xl_control/: CHANGELOG.rst  CMakeLists.txt  package.xml  package.xml~
summit_xl_control/config/: summit_xl_control.yaml  summit_xl_control_diffdrive.yaml  summit_xl_hls_control.yaml  summit_xl_omni_control.yaml  wam_control.yaml  x_wam_control.yaml
summit_xl_control/launch/: summit_xl_control.launch  summit_xl_hls_control.launch  summit_xl_multi_control.launch  summit_xl_omni_control.launch  wam_control.launch  x_wam_control.launch
summit_xl_description/: CMakeLists.txt  model.config  package.xml
summit_xl_description/gazebo/: gazebo_skid_steering.urdf.xacro
summit_xl_description/launch/: low_res.launch  rviz_summit_x.launch  rviz_summit_xl.launch  rviz_summit_xl_fotonic.launch  rviz_summit_xl_hq.launch  rviz_summit_xl_hq_omni.launch  rviz_summit_xl_omni.launch  rviz_summit_xl_suspension.launch  rviz_x_wam.launch  summit_x_state.launch  summit_xl_robotnik.launch  summit_xl_rviz.launch  summit_xl_state.launch  summit_xl_state_omni.launch  summit_xl_state_robot.launch  x_wam_state.launch
summit_xl_description/meshes/: camara_vinbot.stl  hok_tilt.dae  hokuyo-utm30-lx.dae  mecanum_wheel_1.dae  mecanum_wheel_1.stl  mecanum_wheel_2.stl  summit_xl_chassis.dae  summit_xl_chassis_cam1.dae  summit_xl_chassis_cam2.stl  summit_xl_wheel.stl
summit_xl_description/robots/: summit_x.urdf.xacro  summit_xl.urdf.xacro  summit_xl_hokuyo.urdf.xacro  summit_xl_hq.urdf.xacro  summit_xl_hq_omni.urdf.xacro  summit_xl_nocam.urdf.xacro  summit_xl_omni.urdf.xacro  summit_xl_standalone.urdf.xacro
summit_xl_description/sdf/: summit_xl.sdf
summit_xl_description/urdf/: summit_x.urdf.xacro  summit_xl.gazebo  summit_xl.urdf.xacro  summit_xl_fotonic.gazebo  summit_xl_fotonic.urdf.xacro  summit_xl_fotonic_2hokuyos.urdf  summit_xl_hq.gazebo  summit_xl_hq.urdf.xacro  summit_xl_omni.gazebo  x_wam.gazebo  x_wam.urdf.xacro
summit_xl_gazebo/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  mainpage.dox  package.xml  package.xml~
summit_xl_gazebo/config/: controller.yml  gazebo.yml  summit_xl_a_control.yaml  summit_xl_b_control.yaml  summit_xl_c_control.yaml  summit_xl_control.yaml
summit_xl_gazebo/launch/: default.launch.py  description.launch.py  gazebo_rviz.launch  laserscan_multi_merger.launch  spawn.launch.py  spawn_robot.launch  spawn_simulation.launch  summit_xl.launch  summit_xl_a.launch  summit_xl_fotonic.launch  summit_xl_fotonic_2hokuyos.launch  summit_xl_gazebo.launch  summit_xl_hls_omni.launch  summit_xl_hls_omni_office.launch  summit_xl_hq.launch  summit_xl_hq_omni.launch  summit_xl_multi.launch  summit_xl_office.launch  summit_xl_omni.launch  summit_xl_one_robot.launch  summit_xl_steel_multi.launch  summit_xl_steel_omni.launch  wam.launch  x_wam.launch
summit_xl_gazebo/rviz/: summitxl.rviz  summitxl_a.rviz  summitxl_a_std.rviz  summitxl_multi.rviz  summitxl_multi_a.rviz  summitxl_office.rviz  summitxls_a.rviz
summit_xl_gazebo/worlds/: demo.world  empty.world  summit_xl.world  summit_xl_office.world
summit_xl_joystick/: CMakeLists.txt  mainpage.dox  package.xml
summit_xl_joystick/launch/: logitech.yaml  ps3.yaml  summit_xl_joy.launch  thrustmaster.yaml
summit_xl_joystick/src/: summit_xl_joystick.cpp
summit_xl_purepursuit/: CMakeLists.txt  README  package.xml  rviz.rviz
summit_xl_purepursuit/launch/: purepursuit.launch  purepursuit_marker.launch
summit_xl_robot_control/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
summit_xl_robot_control/config/: summit_xl.yaml  summit_xl_omni.yaml  summit_xl_robot_control.yaml  twist_mux.yaml  x_wam.yaml
summit_xl_robot_control/launch/: summit_xl_multi_robot_control.launch  summit_xl_omni_robot_control.launch  summit_xl_robot_control.launch  summit_xl_robot_control_vrep.launch  x_wam_robot_control.launch
summit_xl_robot_control/src/: summit_xl_robot_control.cpp  summit_xl_robot_control_vrep.cpp
summit_xl_sim/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt~  package.xml  package.xml~
summit_xl_sim_bringup/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  package.xml  package.xml~
summit_xl_sim_bringup/launch/: ekf_template.launch  gazebo_moveit_trajectory.launch  rosbridge.launch  run_robot.launch  run_rviz.launch  run_simulation.launch  summit_xl_complete.launch  summit_xl_gen_complete.launch  summit_xl_movebase.launch  summit_xl_omni_complete.launch  summit_xls_cobolleague_complete.launch  summit_xls_complete.launch
summit_xl_waypoints/: CMakeLists.txt  CMakeLists.txt.catkin  manifest.xml.rosbuild  package.xml  readme.txt  waypoints_move_base.rviz
summit_xl_waypoints/launch/: gps_conv.launch  robot_pose_ekf.launch  robot_pose_ekf_2.launch  rviz.vcg  simulation_environment.launch  simulation_environment.txt  simulation_environment_gmapping.launch  simulation_environment_gps.launch  summit_xl_waypoints.launch
(+140 files in other folders)
