<package>
  <name>summit_xl_gazebo</name>
  <version>1.0.0</version>
  <description>
		Launch files for Summit XL simulation.
	</description>
  <maintainer email="dcarbonell@robotnik.es">Dani Carbonell</maintainer>

  <license>BSD</license>

  <author email="rguzman@robotnik.es">Robotnik</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>summit_xl_control</run_depend>  
  <run_depend>summit_xl_description</run_depend>
  <run_depend>summit_xl_pad</run_depend>
  <run_depend>twist_mux</run_depend>   

</package>
