<package>
  <name>summit_xl_sim_bringup</name>
  <version>1.1.3</version>
  <description>
		Launch files for Summit XL simulation.
	</description>
  <maintainer email="cvillar@robotnik.es">Carlos Villar</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/summit_xl_sim_bringup</url>
  <url type="repository">https://github.com/RobotnikAutomation/summit_xl_sim.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/summit_xl_sim/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>
  <author email="rnavarro@robotnik.es">Román Navarro</author>
  <author email="jarino@robotnik.es">Jorge Ariño</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>summit_xl_control</run_depend>  
  <run_depend>summit_xl_description</run_depend>
  <run_depend>summit_xl_pad</run_depend>  

</package>
